Break up solara exercises

--- a/04c_solara.ipynb
+++ b/04c_solara.ipynb
@@ -408,10 +408,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n",
+    "## Solara exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Add the text widgets\n",
     "\n",
-    "1. Add the text widgets from the dashboard to this solara example. Use the [solara `HTML` component](https://solara.dev/documentation/components/output/html) to display the text.\n",
-    "2. Improve the controls consistency check. The window size should really be at least one less than the range of years displayed. In other words, it does not make sense to use a window size of 100 if you are only displaying 50 years of data. It does not crash here when you do that because the smoothed column is called from the full data set."
+    "Add the text widgets from the dashboard to this solara example. Use the [solara `HTML` component](https://solara.dev/documentation/components/output/html) to display the text.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Improve the controls consistency check\n",
+    "\n",
+    "The window size should really be at least one less than the range of years displayed. In other words, it does not make sense to use a window size of 100 if you are only displaying 50 years of data. It does not crash here when you do that because the smoothed column is called from the full data set."
    ]
   },
   {
