Add link to more extensive solara example

--- a/04c_solara.ipynb
+++ b/04c_solara.ipynb
@@ -389,6 +389,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## solara scales well to larger applications\n",
+    "\n",
+    "Open up this dashboard, which is more complicated than the one we have built: https://py.cafe/maartenbreddels/solara-dashboard-scatter\n",
+    "\n",
+    "You will be able to view both the code and the dashboard. The code for this example is just over 100 lines, not much longer than the solara version of our dashboard."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Solara exercises"
    ]
   },
