Added deploying with docker instructions to 04a

--- a/04a_deployment_serverside.ipynb
+++ b/04a_deployment_serverside.ipynb
@@ -96,7 +96,137 @@
    "source": [
     "## Running Voilà in a Docker Container\n",
     "\n",
-    "# Maybe Nicole can add some notes here?!?"
+    "In this section we will learn how to deploy Voila using Docker. We will use an example dashboard from a template project - [rcpurdue/nbtmpl](https://github.com/rcpurdue/nbtmpl) - that inspired the dashboard we just built in this tutorial. \n",
+    "\n",
+    "> NOTE: The Docker build process is time consuming, so **we do not expect you to actually run through the build process**. Rather, we want to familiarize you with your deployment options so you can learn more on your own time. That said, the following is a working example and we will leave you with an exercise if you want to try it for yourself with the codebase you have created in this tutorial. \n",
+    "\n",
+    "**Docker** is a platform that uses containerization to allow developers to package applications and their dependencies into portable containers that can run consistently across different environments. Docker can be used with service providers to quickly deploy single servers hosting Voila. \n",
+    "\n",
+    "**Dockerfile** is a script containing a series of instructions on how to build a Docker image, specifying the base image, dependencies, configurations, and the application itself. \n",
+    "\n",
+    "**Our goal** here is to create and understand a standalone Dockerfile that automatically deploys our Voila server.\n",
+    "\n",
+    "Note that the Dockerfile and build command are written in such a way that having a local clone of the entire tutorial repository is not required. Rather, the repository is cloned by Docker upon build. That is so that if we just want to deploy the our app with a service provider, we need only provide a Dockerfile. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "879ea8e0-5cfc-4f48-962b-e167006e7f94",
+   "metadata": {},
+   "source": [
+    "### Dockerfile  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1167fdd-3f3e-4ab8-b402-f06bfe08088d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load Dockerfile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "532d1e5f-2607-42ec-a8a1-0f22dc041487",
+   "metadata": {},
+   "source": [
+    "### Docker Build Command\n",
+    "\n",
+    "The following command is used to build a Docker image from a Dockerfile.\n",
+    "\n",
+    "```bash\n",
+    "docker build -t voila-dashboard --build-arg repourl=https://github.com/Jupyter4Science/scipy2024-jupyter-widgets-tutorial.git .\n",
+    "```\n",
+    "\n",
+    "`-t voila-dashboard`: The -t option tags the image with a name. In this case, the image is tagged as voila-dashboard. This tag makes it easier to reference the image later, such as when running a container.\n",
+    "\n",
+    "`--build-arg repourl=https://github.com/rcpurdue/nbtmpl.git`: The --build-arg option allows you to pass build-time variables to the Dockerfile. Here, repourl is set to https://github.com/rcpurdue/nbtmpl.git. This argument is used in the Dockerfile to specify the repository URL that should be cloned during the build process.\n",
+    "\n",
+    "`.` (dot): The dot at the end of the command specifies the build context, which is the current directory. Docker will use the files in this directory, including the Dockerfile, to build the image.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acd0c03-af60-459f-b61f-5f33db821d61",
+   "metadata": {},
+   "source": [
+    "### Takehome Exercise\n",
+    "\n",
+    "**Goal**: Build our Dockerfile and run the image on our local machine. Access our Voila app in our browser. \n",
+    "\n",
+    "1. [Install Docker](https://docs.docker.com/engine/install/ubuntu/#install-using-the-repository). Note that you may need admin access to run Docker commands.\n",
+    "2. Start a command line (terminal) session.\n",
+    "3. Make sure Docker by executing `docker info`.\n",
+    "4. Use command explained above to build the Docker image labeled with the tag \"voila-dashboard\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01f88ddd-f6ef-4151-a157-aa2506c1170a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DO NOT UNCOMMENT: unless you have Docker already installed and you want to build a container\n",
+    "\n",
+    "# docker build -t voila-dashboard --build-arg repourl=https://github.com/Jupyter4Science/scipy2024-jupyter-widgets-tutorial.git ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3137076-bf6e-4e6e-ac0e-532450a9039b",
+   "metadata": {},
+   "source": [
+    "5. Run the image called \"voila-dashboard\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0cb8afc-8ff4-4231-aacd-d19fd2efe312",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DO NOT UNCOMMENT: unless you have Docker already installed and you want to build a container\n",
+    "\n",
+    "# docker run -p 8866:8866 voila-dashboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ac06df7-e55e-451e-8590-fc9fcd40c82e",
+   "metadata": {},
+   "source": [
+    "The `-p` flag in the docker run command is used to publish a container's port to the host machine, allowing external access to services running inside the container. \n",
+    "\n",
+    "In the command `docker run -p 8866:8866 voila-dashboard`, the `-p 8866:8866` part maps port 8866 of the host machine to port 8866 of the container. This makes the next step possible.\n",
+    "\n",
+    "6. Open your Voila app in your browser by visiting http://localhost:8866."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db188c9f-a5cf-4e18-ac84-3eec45bf2f21",
+   "metadata": {},
+   "source": [
+    "### High-Level Instructions for Deploying Voila with a Service Provider\n",
+    "\n",
+    "If you wish to achieve the same result with a service provider, things get a little more tricky because of the firewalls and permissions that need to be set up to access Voila through the public IP. Here are some general requirements that may look different depending on the service or platform you are working on. \n",
+    "\n",
+    "#### Configure Security Groups/Firewalls\n",
+    "Set up security groups or firewall rules to allow inbound traffic on the port you will be using (e.g., port 8866 for Voila). Ensure that SSH access (port 22) is also allowed so you can manage your server.\n",
+    "\n",
+    "#### Create and Attach a Floating Public IP\n",
+    "Allocate a floating public IP address for your virtual machine. It may be neccesary to attach the allocated public IP to your virtual machine instance to enable access from the internet.\n",
+    "\n",
+    "#### Upload a Dockerfile or transfer to your server\n",
+    "Some composible services support starting images directly from Dockerfiles, while others may require you to log into the node to install Docker and build your container for yourself.\n",
+    "\n",
+    "#### Access Your Application\n",
+    "\n",
+    "Once the Docker container is running and ports are properly configured, you can access your Voila dashboard through the public IP address of your virtual machine (e.g., `http://<public-ip>:8866`)."
    ]
   },
   {
@@ -216,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
