Move the ipywidgets widget list code to static.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -130,10 +130,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reference.widget_org import organized_widgets, list_overview_widget\n",
+    "from static.widget_org import organized_widgets, list_overview_widget\n",
     "\n",
     "groups = organized_widgets(organize_by='ui')\n",
-    "help_url_base='reference/complete-ipywidgets-widget-list.ipynb'\n",
+    "help_url_base='static/complete-ipywidgets-widget-list.ipynb'\n",
     "list_overview_widget(groups, columns=2, min_width_single_widget=200, help_url_base=help_url_base)"
    ]
   },
