--- a/05_further_reading.ipynb
+++ b/05_further_reading.ipynb
@@ -16,7 +16,9 @@
     "## More about Jupyter widgets\n",
     "\n",
     "+ A SciPy tutorial focused on the core Jupyter widgets and related packages: https://github.com/jupyter-widgets/tutorial\n",
-    "+ The [`ipywidgets` documentation](https://ipywidgets.readthedocs.io/en/stable/): https://ipywidgets.readthedocs.io/en/stable/"
+    "    + The folder notebooks/03.Widget_events has a step by step example of using a pure widget/traitlets approach that is a little different than what is outlined in this tutorial.\n",
+    "+ The [`ipywidgets` documentation](https://ipywidgets.readthedocs.io/en/stable/): https://ipywidgets.readthedocs.io/en/stable/\n",
+    "+ There a lot of widget packages available. A good list is here: https://github.com/nicole-brewer/awesome-jupyter-widgets"
    ]
   },
   {
@@ -25,7 +27,9 @@
    "metadata": {},
    "source": [
     "## Alternative approaches\n",
-    "\n"
+    "\n",
+    "+ [anywidget](https://anywidget.dev/) gives you lots of flexibility to make custom widgets using some javascript without the usual overhead of making a javascript-based widget. They also presented a [tutorial in the morning session](https://github.com/manzt/scipy-2024-anywidget), it is worth checking out!\n",
+    "+ [Panel](https://panel.holoviz.org/) allows you to construct interactive dashboards in Python. "
    ]
   }
  ],
