Apply suggestions from code review
Co-authored-by: Juan Cabanela <cabanela@mnstate.edu>

--- a/04d_deployment_with_solara.ipynb
+++ b/04d_deployment_with_solara.ipynb
@@ -138,7 +138,7 @@
     "    + `widgets.py` was renamed to `tutorial_widgets.py`\n",
     "    + `main.py` imports from `tutorial_widgets` instead of `dashboard.widgets` because i) folders are not allowed, and ii) `widgets` would conflict with `import ipywidgets as widgets`.\n",
     "    + The `DATA` folder was changed from `data` to `.`.\n",
-    "+ The `ipyautoui` version of the dashboard is not on PyCafe because `ipyautoui` isn't supported, apparently."
+    "+ The `ipyautoui` version of the dashboard is not on PyCafe because `ipyautoui` isn't supported (yet?)."
    ]
   },
   {
@@ -152,7 +152,7 @@
     "\n",
     "Two things were uploaded to make the app:\n",
     "\n",
-    "+ `dashboard_solara/app.y`, modified so that `DATA = \".\"` instead of `DATA = \"data\"`\n",
+    "+ `dashboard_solara/app.py`, modified so that `DATA = \".\"` instead of `DATA = \"data\"`\n",
     "+ The CSV data file from the tutorial."
    ]
   }
