--- a/05_further_reading.ipynb
+++ b/05_further_reading.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## More about Jupyter widgets\n",
     "\n",
-    "+ A SciPy tutorial focused on the core Jupyter widgets and related packages: https://github.com/jupyter-widgets/tutorial\n",
+    "+ A SciPy 2002 tutorial focused on the [core Jupyter widgets and related packages](https://github.com/jupyter-widgets/tutorial)\n",
     "    + The folder notebooks/03.Widget_events has a step by step example of using a pure widget/traitlets approach that is a little different than what is outlined in this tutorial.\n",
     "+ The [`ipywidgets` documentation](https://ipywidgets.readthedocs.io/en/stable/): https://ipywidgets.readthedocs.io/en/stable/\n",
     "+ There a lot of widget packages available. A good list is here: https://github.com/nicole-brewer/awesome-jupyter-widgets"
