Changed dashboard demo to work using committed key.

--- a/02d_dashboard_test.ipynb
+++ b/02d_dashboard_test.ipynb
@@ -32,7 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dashboard.main import main_widget # import the main widget\n",
+    "# If everything works, you should be able to remove the 'key.' from the import statement\n",
+    "# and run this script using the dashboard widget you developed.\n",
+    "from key.dashboard.main import main_widget # import the main widget\n",
     "\n",
     "main_widget # display the main widget"
    ]
