--- a/04b_deployment_clientside.ipynb
+++ b/04b_deployment_clientside.ipynb
@@ -7,11 +7,13 @@
    "source": [
     "# Deploying Your Dashboard: Client-Side Processing Options\n",
     "\n",
-    "## TO DO IN THIS NOTEBOOK\n",
-    "- [x] Discuss Voici as a Jupyter lite based alternative to Voila (although there are restrictions to its use tied to Jupyter lite)\n",
-    "- [ ] Discuss nbdev depolyment as static pages.\n",
-    "- [ ] Discuss deployment to Github Pages as a static site.\n",
-    "- [ ] Discuss deployment to Sphinx (not sure this is actually possible)"
+    "### Goal of this Notebook\n",
+    "\n",
+    "In this notebook we outline how to deploy your dashboard as a standalone web application with the processing occurring on the client side rather than the server side.  This is useful when you want to deploy your dashboard to a wider audience without the need for a heavy-duty server.\n",
+    "\n",
+    "### Steps You Will Take In This Notebook\n",
+    "In this notebook you will:\n",
+    "1. Briefly review voici, a tool for deploying dashboards with client-side processing."
    ]
   },
   {
@@ -101,21 +103,11 @@
    "metadata": {},
    "source": [
     "**Annoying Voici Build Problem**: There is currently a problem in that during the build process if `conda` is used to install the packages. A bug was recently introduced in the build-process for WebAssembly packages at the `emscripten-force` repo that causes the build to fail with an error that \"'emscripten' is not a valid Platform\".\n",
-    "- [This is a known issue](https://github.com/mamba-org/mamba/issues/3291) and is [being worked on](https://github.com/conda/conda/pull/13962).  \n",
+    "- [This is a known issue](https://github.com/mamba-org/mamba/issues/3291) and is [being worked on](https://github.com/conda/conda/pull/13962).\n",
     "- If this happens to you, you may will likely need to perform a `conda clean --all` to clear the messed up package metadata that you downloaded. Otherwise any future attempt to `conda install` will fail with a similar error!\n",
     "- The workaround is to install `micromamba` (which is why we include it in the `complexapps-2024` environment) as it doesn't trigger the bug and is automatically selected by `voici build` if installed.\n",
-    "  \n",
-    "**Other Bugs**: There are other bugs we have noticed, for example, the voici-deployed web application does not seem to be able to update the plot on the dashboard."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89b3df3d-e2c4-4b8d-91bc-64d96420b6bd",
-   "metadata": {},
-   "source": [
-    "# Congratulations!\n",
     "\n",
-    "That concludes this tutorial section. Great job everyone."
+    "**Other Bugs**: The voici-deployed web application does not seem to be able to update the matplotlib-generated plot on the dashboard.  We have not seen issues with other widgets."
    ]
   },
   {
