Fixed a few typoes

--- a/02c_layout.ipynb
+++ b/02c_layout.ipynb
@@ -508,7 +508,7 @@
    "id": "2d0c3c4c",
    "metadata": {},
    "source": [
-    "We used the `justify_content` (Flexbox) paramter in the layout to make it so space was inserted between the two children so that the total width they occupy is 500 pixels. \n",
+    "We used the `justify_content` (Flexbox) parameter in the layout to make it so space was inserted between the two children so that the total width they occupy is 500 pixels. \n",
     "\n",
     "Let's compare the width of the curve parameter controls to the width of the `years_range` slider."
    ]
@@ -530,12 +530,12 @@
    "source": [
     "Nice! This looks good because this `HBox` is about as wide as our `year_range` slider.  Notice that we can pass in the children as a parameter to the widget, or change the children trait after the widget has already been instantiated. \n",
     "\n",
-    "**EXERCISE**: Create a `VBox` vertical container that holds the descriptive text (`intro_text`, `data_source_text`) and `curve_parameter_widgets` and `year_range` widgets.  This will allow us to stack the widgets on top of each other."
+    "**EXERCISE**: Create a `VBox` vertical container called `desc_and_ctrl_box` that holds the descriptive text (`intro_text`, `data_source_text`) and `curve_parameter_widgets` and `year_range` widgets.  This will allow us to stack the widgets on top of each other."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ed9eb9fb-4693-4474-b95a-36422a98af4c",
    "metadata": {},
    "outputs": [],
@@ -543,7 +543,7 @@
     "#| export\n",
     "# %answer key/dashboard/main.py 47\n",
     "\n",
-    "# Create a VBox to hold the description and control widgets\n",
+    "# Create a VBox called `desc_and_ctrl_box` to hold the description and control widgets\n",
     "# add children intro_text, data_source_text, year_range, curve_parameter_widgets\n"
    ]
   },
