Move class review out of notebook 03a

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "In this notebook we will define a class using Pydantic that does not, by itself, have any widgets attached to it. In the next notebook we will use `ipyautoui` to generate a widget-based user interface from our Pydantic class that will be much easier to reuse.\n",
     "\n",
-    "### Goals for our pydantic class:\n",
+    "### Goals for our pydantic `DataSelector` class:\n",
     "\n",
     "The class should have these attributes (also called *fields* in the pydantic documentation):\n",
     "\n",
@@ -68,474 +68,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Review of Python classes\n",
-    "\n",
-    "We begin with a quick review of writing classes in Python. If you are comfortable with this, you can jump ahead to the next section on \"Constructing a (First Draft) `DataSelector` Class with plain Python\".\n",
-    "\n",
-    "The smallest class you can write is below. It does not really do anything, but you can create instances of it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Basic:\n",
-    "    \"\"\"This basic class does nothing!\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "basic = Basic()\n",
-    "print(basic)"
+    "## (optional) [Review of Python classes and a (First Draft) `DataSelector` Class](03az_OPTIONAL_intro_classes.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is not much going on here, but we do at least get a docstring:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(basic.__doc__)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Adding a method to the class\n",
-    "\n",
-    "A *method* is a function that is part of a class. There are a couple of variations on methods for classes, but for now we will stick to the most common kind, called an *instance method*. \n",
-    "\n",
-    "One special thing about methods: the first argument will be the instance of the class that is *bound* to the instance. That argument is almost universally called `self` in Python."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Basic:\n",
-    "    \"\"\"This basic class does almost nothing!\"\"\"\n",
-    "\n",
-    "    def say_hello(self, name):\n",
-    "        \"\"\"\n",
-    "        Print a greeting.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "\n",
-    "        name: str\n",
-    "            Name of the person to be greeted.\n",
-    "        \"\"\"\n",
-    "        print(f\"Hello {name}!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's call our new method by creating an instance of the class and calling the `say_hello` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "basic = Basic()\n",
-    "basic.say_hello(\"coder\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Subclasses\n",
-    "\n",
-    "Every class in Python is actually derived from another class, called its *parent* (ultimately the \"ancestor\" of all Python classes is the `object` class).  A subclass *inherits* all of the attributes and methods of its parent.\n",
-    "\n",
-    "As an example of subclassing, we define a class inherits from `Basic` all of its methods and adds a new method that asks the user a question after greeting them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# HowYaDoing is the subclass, and Basic is its parent, called a superclass\n",
-    "class HowYaDoing(Basic):\n",
-    "    \"\"\"\n",
-    "    Ask the user how they are doing.\n",
-    "    \"\"\"\n",
-    "    # This method greets the user, then asks how they are doing.\n",
-    "    def howdy(self, name):\n",
-    "        \"\"\"\n",
-    "        Greet the user, then ask how they are doing.\n",
-    "\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "\n",
-    "        name: str\n",
-    "            Name of person to be greeted.\n",
-    "        \"\"\"\n",
-    "        # Start by saying hello -- HowYaDoing has a say_hello method from \n",
-    "        # the Basic class.\n",
-    "        self.say_hello(name)\n",
-    "\n",
-    "        print(f\"How are you doing, {name}?\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using this class is a lot like using `Basic`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hiya = HowYaDoing()\n",
-    "hiya.howdy(\"coder\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Adding an attribute to a class\n",
-    "\n",
-    "Imagine we were going to extend this class by adding several more methods that each \"say\" something to the user, and that each of those will include the user's name. It would be convenient if the class just knew the name, something we can accomplish by adding an attribute to the class.\n",
-    "\n",
-    "Here we will add a `name` attribute to the `Basic` class. We will do that in a special method called `__init__` that is called when an instance of the class is created.\n",
-    "\n",
-    "You may wonder whether `Basic` is a subclass of anything. The answer is yes -- if you do not provide an explicit parent class then Python assumes it is `object`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# It looks like Basic is not subclassing from anything, but in Python\n",
-    "# if an explicit superclass isn't given it is assumed to be object.\n",
-    "class Basic:\n",
-    "    \"\"\"This basic class does almost nothing!\"\"\"\n",
-    "\n",
-    "    # This is the new part\n",
-    "    def __init__(self, name):\n",
-    "        \"\"\"\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "\n",
-    "        name : str\n",
-    "            Name of the person to be greeted.\n",
-    "        \"\"\"\n",
-    "        self.name = name\n",
-    "\n",
-    "    # We do not need a name argument anymore\n",
-    "    def say_hello(self):\n",
-    "        \"\"\"\n",
-    "        Print a greeting.\n",
-    "        \"\"\"\n",
-    "        # self.name is defined in __init__, which is automatically called\n",
-    "        # when an instance of this class is created.\n",
-    "        print(f\"Hello {self.name}!\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The details of using this are a little different than our first implementation. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coder_greeter = Basic(\"coder\")\n",
-    "coder_greeter.say_hello()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To wrap this part up, let's rewrite the `HawYaDoing` class to use the `name` attribute. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class HowYaDoing(Basic):\n",
-    "    \"\"\"\n",
-    "    Ask the user how they are doing.\n",
-    "    \"\"\"\n",
-    "    # This method greets the user, then asks how they are doing. We don't \n",
-    "    # need the name anymore since it is defined in Basic now.\n",
-    "    def howdy(self):\n",
-    "        \"\"\"\n",
-    "        Greet the user, then ask how they are doing.\n",
-    "        \"\"\"\n",
-    "        self.say_hello()\n",
-    "\n",
-    "        # Note we access the name via self        \n",
-    "        print(f\"How are you doing, {self.name}?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "howdy_coder = HowYaDoing(\"coder\")\n",
-    "howdy_coder.howdy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Add another method to `HowYaDoing` that asks the user \"What is up?\" and includes their name in the question. Call the method `whats_up`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: write answer "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Constructing a (First Draft) `DataSelector` Class with plain Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we write a class with a single attribute, called `year_range`. This is not the most compact or efficient way that a class that simply has one attribute could be written, but that is deliberate. Understanding the \"plainest\" way to do this will help motivate some of the shortcuts we see in a little bit.\n",
-    "\n",
-    "Unlike the `name` attribute above, a default value is provided for `year_range`.\n",
-    "\n",
-    "This class also has a method called `__init__` that is called when the class is created, as in our first example.\n",
-    "\n",
-    "The `print` statement in the `__init__` is there to make it easier to see when it is called. It will not be included in the final version of this class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DataSelectorPlainPython:\n",
-    "    \"\"\"\n",
-    "    Partial implementation of a class to hold a data selector widget.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, year_range_input=(1800, 2000)):\n",
-    "        \"\"\"\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "\n",
-    "        year_range_input: tuple[int, int]\n",
-    "            A tuple of two integers that is the range of years present in the data.\n",
-    "\n",
-    "        Attributes\n",
-    "        ----------\n",
-    "\n",
-    "        year_range: tuple[int, int]\n",
-    "            The range of the data.\n",
-    "        \"\"\"\n",
-    "        self.year_range = year_range_input\n",
-    "        print(f\"In __init__, {year_range_input=} and {self.year_range=}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's make an instance of this class and print it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selector_plain = DataSelectorPlainPython()\n",
-    "print(f\"{selector_plain=}\")\n",
-    "print(f\"{selector_plain.year_range=}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is great that we can see (and could use) the `year_range` but printing the object itself is not that nice. We will return to that later."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Comparing instances of a class\n",
-    "\n",
-    "You might expect that two instances of the class that have the same value for its attribute would be considered by Python to be equal. Let's give that a try."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_plain_2 = DataSelectorPlainPython(year_range_input=(1991, 2018))\n",
-    "sel_plain_3 = DataSelectorPlainPython(year_range_input=(1991, 2018))\n",
-    "\n",
-    "sel_plain_3 == sel_plain_2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Apparently Python does not see these as the same! We could fix that by implementing another magic method called `__eq__`, but it turns out there is an easier way, using data classes, which we will talk about shortly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Try making another instance of `DataSelectorPlainPython` with a `year_range` of 1950 to 2020. You cannot modify the class definition to do this part."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %answer key/03a/01.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Add a `window_size` attribute with a default value of 2 and a `polynomial_order` attribute with a default value of 1 to the class in the cell below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %answer key/03a/03.py\n",
-    "\n",
-    "class DataSelectorPlainPython:\n",
-    "    \"\"\"\n",
-    "    Partial implementation of a class to hold a data selector widget.\n",
-    "    \"\"\"\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        year_range_input=(1800, 2000)\n",
-    "    ):\n",
-    "        self.year_range = year_range_input\n",
-    "        # Add your code here and to the __init__ signature above\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. Make an instance of the class called `selector_plain` and print each of its attributes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %answer key/03a/05.py\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4. Try setting the attributes to nonsense values, e.g. a string, and see what happens."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %answer key/03a/07.py\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "At this point we have a class which has all the attributes we want, though it has no widgets attached to it, no notion of what constitute valid values, and is a little verbose to write."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Constructing a (Second Draft) `DataSelector` Class with `dataclass`\n",
     "Writing a class with multiple attributes gets repetitive in Python. Each attribute typically comes with an argument to the class and lines of boilerplate code to set the attributes of the class to the those arguments.\n",
@@ -682,7 +222,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Progress check\n",
     "\n",
