--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -7,9 +7,12 @@
    "source": [
     "# Welcome to Building Complex Web Apps with Jupyter Widgets\n",
     "\n",
-    "**Instructors:** Nicole Brewer, Matt Craig, Juan Cabanela, and Maarten Breddels\n",
+    "**Instructors:** Nicole Brewer ([@nicole-brewer](https://github.com/nicole-brewer)), Matt Craig ([@mwcraig](https://github.com/mwcraig), Juan Cabanela ([@JuanCab](https://github.com/juancab)), and Maarten Breddels ([@maartenbreddels](https://github.com/maartenbreddels))\n",
     "\n",
-    "**Spacetime Coordinates:** 09 July 2024 13:30–17:30 (US/Pacific), Tacoma Convention Center Room 318"
+    "**Spacetime Coordinates:** 09 July 2024 13:30–17:30 (US/Pacific), Tacoma Convention Center Room 318\n",
+    "\n",
+    "### Start here: \n",
+    "#### [`https://github.com/Jupyter4Science/scipy2024-jupyter-widgets-tutorial`](https://github.com/Jupyter4Science/scipy2024-jupyter-widgets-tutorial)"
    ]
   },
   {
