--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Welcome to Building Complex Web Apps with Jupyter Widgets\n",
     "\n",
-    "**Instructors:** Nicole Brewer ([@nicole-brewer](https://github.com/nicole-brewer)), Matt Craig ([@mwcraig](https://github.com/mwcraig), Juan Cabanela ([@JuanCab](https://github.com/juancab)), and Maarten Breddels ([@maartenbreddels](https://github.com/maartenbreddels))\n",
+    "**Instructors:** Nicole Brewer ([@nicole-brewer](https://github.com/nicole-brewer)), Matt Craig ([@mwcraig](https://github.com/mwcraig)), Juan Cabanela ([@JuanCab](https://github.com/juancab)), and Maarten Breddels ([@maartenbreddels](https://github.com/maartenbreddels))\n",
     "\n",
     "**Spacetime Coordinates:** 09 July 2024 13:30–17:30 (US/Pacific), Tacoma Convention Center Room 318\n",
     "\n",
