Add the bit necessary for the traitlet to sync to the front end
This is not actually used here, but is a good practice.

--- a/03c_other_dashboard_elements.ipynb
+++ b/03c_other_dashboard_elements.ipynb
@@ -213,7 +213,7 @@
     "DATA_FILE = 'land-ocean-temp-index.csv'\n",
     "\n",
     "class DataAndPlot(tr.HasTraits):\n",
-    "    smoothing_info = tr.Dict(allow_none=True, default=None)\n",
+    "    smoothing_info = tr.Dict(allow_none=True, default=None).tag(sync=True)\n",
     "    \n",
     "    def __init__(self):\n",
     "        self.original_data = pd.read_csv(Path(DATA_DIR) / DATA_FILE, escapechar='#')\n",
@@ -319,7 +319,7 @@
    "source": [
     "# TODO: write answer \n",
     "\n",
-    "dap.smoothing_info[\"window_size\"] = 8"
+    "dap.smoothing_info[\"window_size\"] = 2"
    ]
   },
   {
