Add a bit more about the motivation for using pydantic

--- a/03d_dashboard2.ipynb
+++ b/03d_dashboard2.ipynb
@@ -277,9 +277,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4d78d0d-0e53-4d81-b249-442caa05b79b",
+   "metadata": {},
+   "source": [
+    "## Why bother with pydantic and ipyautoui?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6604f196-e2ed-49cb-92a6-fefcd8a74501",
+   "metadata": {},
+   "source": [
+    "The most obvious advantage is that you need to write little or no ui code. It is also easy to compose complex settings or controls by making pydantic models whose types are a pydantic model, and ipyautoui knows how to render those (the next notebook presents an example of that).\n",
+    "\n",
+    "Those settings can all be saved to disk as JSON either from Python or by clicking the \"save\" button in the ipyautoui-generated widget.\n",
+    "\n",
+    "Another advantage in larger projects is that it encourages you to separate your application logic from the implementation of the user interface.\n",
+    "\n",
+    "Keeping those separate makes testing the application logic much more straightforward. It also makes it easier to change the UI in the future if new options become available."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc01c4c-8928-4f22-8aff-628ff7fa9cbf",
+   "id": "cd57633e-9526-430c-8470-8d70fe2ba9b8",
    "metadata": {},
    "outputs": [],
    "source": []
