Add a note about pydantic TypeAdapter

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -1131,6 +1131,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FYI: `pydantic.TypeAdapter` can make any class a Pydantic class\n",
+    "\n",
+    "Pydantic 2 introduced `TypeAdapter` ([docs are here](https://docs.pydantic.dev/latest/concepts/type_adapter/) and it is also discussed in the [Types documentation ](https://docs.pydantic.dev/latest/concepts/types/#constrained-types)) which essentially takes any class and adds some of the methods you get if you subclass from `BaseModel`. This is very useful if the class you would like to work with is one from a package that you cannot modify to subclass from `BaseModel`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
