Add link to Panel tutorial

--- a/05_further_reading.ipynb
+++ b/05_further_reading.ipynb
@@ -29,7 +29,7 @@
     "## Alternative approaches\n",
     "\n",
     "+ [anywidget](https://anywidget.dev/) gives you lots of flexibility to make custom widgets using some javascript without the usual overhead of making a javascript-based widget. They also presented a [tutorial in the morning session](https://github.com/manzt/scipy-2024-anywidget), it is worth checking out!\n",
-    "+ [Panel](https://panel.holoviz.org/) allows you to construct interactive dashboards in Python. "
+    "+ [Panel](https://panel.holoviz.org/) allows you to construct interactive dashboards in Python. Another tutorial this morning was [hvPlot and Panel: Easy data visualization, data exploration, and data apps](https://holoviz.org/tutorial/). It is also worth a look!"
    ]
   }
  ],
