Update ploomber link and provide zip

--- a/04d_deployment_with_solara.ipynb
+++ b/04d_deployment_with_solara.ipynb
@@ -148,13 +148,24 @@
    "source": [
     "## Deploying to Ploomber\n",
     "\n",
-    "[Ploomber](https://ploomber.io/) is a service for deploying apps that has support for both voila and solara apps. It is backed by a server, so it will not scale well to a large number of users. A solara app should scale somewhat better than a voila app. In both cases, uploading an app is fairly easy. The solara version of the app is here: https://white-flower-7961.ploomberapp.io\n",
+    "[Ploomber](https://ploomber.io/) is a service for deploying apps that has support for both voila and solara apps. It is backed by a server, so it will not scale well to a large number of users. A solara app should scale somewhat better than a voila app. In both cases, uploading an app is fairly easy. The solara version of the app is here: [https://gentle-pine-5221.ploomberapp.io](https://gentle-pine-5221.ploomberapp.io)\n",
     "\n",
     "Two things were uploaded to make the app:\n",
     "\n",
-    "+ `dashboard_solara/app.py`, modified so that `DATA = \".\"` instead of `DATA = \"data\"`\n",
-    "+ The CSV data file from the tutorial."
+    "+ `dashboard_solara/app.py`.\n",
+    "+ The CSV data file from the tutorial.\n",
+    "+ A brief `requirements.txt`\n",
+    "\n",
+    "The zip file that was uploaded to ploomber is the `key` folder."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "848f93d4-608d-4849-830c-39c60edc533e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
