Last minute hot fixes.

--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -46,7 +46,8 @@
    "source": [
     "%%bash\n",
     "\n",
-    "git pull"
+    "git pull\n",
+    "conda env update -f environment.yml"
    ]
   },
   {
