--- a/01a_getting_started.ipynb
+++ b/01a_getting_started.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reference.widget_org import organized_widgets, list_overview_widget\n",
+    "from static.widget_org import organized_widgets, list_overview_widget\n",
     "\n",
     "groups = organized_widgets(organize_by='ui')\n",
     "help_url_base='reference/complete-ipywidgets-widget-list.ipynb'\n",
