Bug fixes caught during live tutorial (Doh!)

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -1025,7 +1025,7 @@
    "source": [
     "#| export\n",
     "poly_order.observe(on_poly_order_change, 'value')\n",
-    "window_size.observe(update_selected_datagrid, 'value')"
+    "poly_order.observe(update_selected_datagrid, 'value')"
    ]
   },
   {
